--- a/res/layout/login1.xml
+++ b/res/layout/login1.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,6 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="140"
+        android:layout_marginTop="5sp"
         android:background="@drawable/login_write" >
 
         <TableRow
@@ -92,16 +93,8 @@
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="70"
-         >
-
-        <Button
-            android:id="@+id/get_sms"
-            android:layout_width="0dp"
-            android:text="获取短信密码"
-            android:textSize="12sp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        android:layout_weight="70" 
+        android:layout_marginTop="5sp">
 
         <ImageView
             android:id="@+id/login"
@@ -110,8 +103,6 @@
             android:layout_weight="3"
             android:background="@drawable/login_selector" />
     </TableRow>
-
- 
 
     <TableRow
         android:id="@+id/tableRow1"
@@ -134,6 +125,8 @@
         android:id="@+id/click1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
         android:layout_weight="80"
         android:background="@drawable/show_id_selector" >
 
@@ -184,6 +177,9 @@
         android:id="@+id/click2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="5sp"
         android:layout_weight="80"
         android:background="@drawable/show_id_selector" >
 
@@ -234,6 +230,9 @@
         android:id="@+id/click3"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="5sp"
         android:layout_weight="80"
         android:background="@drawable/show_id_selector" >
 
@@ -285,7 +284,11 @@
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="80" >
+        android:layout_weight="80"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp"
+        android:layout_marginTop="5sp" 
+        >
 
         <ImageView
             android:id="@+id/refresh"
