--- a/res/layout/login1.xml
+++ b/res/layout/login1.xml
@@ -94,7 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="70" 
-        android:layout_marginTop="5sp">
+        android:layout_marginTop="5sp">                                <Button                         android:id="@+id/get_password"            android:layout_width="0dp"            android:layout_height="match_parent"            android:layout_weight="2"            android:text="获取动态密码"            />
 
         <ImageView
             android:id="@+id/login"
