--- a/res/layout/login1.xml
+++ b/res/layout/login1.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="140"
-        android:layout_marginTop="5sp"
+        android:layout_marginTop="5sp"        android:layout_marginLeft="10sp"        android:layout_marginRight="10sp"
         android:background="@drawable/login_write" >
 
         <TableRow
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:background="@drawable/login_selector" />
+            android:background="@drawable/login_selector"            android:layout_marginLeft="10sp"            android:layout_marginRight="10sp" />
     </TableRow>
 
     <TableRow
