--- a/res/layout/report.xml
+++ b/res/layout/report.xml
@@ -116,7 +116,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="60"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_marginLeft="10sp"
+        android:layout_marginRight="10sp" >
 
         <ImageView
             android:id="@+id/save"
