--- a/res/layout/activity_main1.xml
+++ b/res/layout/activity_main1.xml
@@ -76,8 +76,7 @@
             <ImageView
                 android:id="@+id/view_cmcc"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -121,8 +120,7 @@
             <ImageView
                 android:id="@+id/view_cmccedu"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -166,8 +164,7 @@
             <ImageView
                 android:id="@+id/view_chinanet"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -194,10 +191,6 @@
                 android:src="@drawable/start_test2" />
         </TableRow>
     </TableRow>
-
-
-
-
 
     <TableRow
         android:layout_width="match_parent"
@@ -226,8 +219,7 @@
             <ImageView
                 android:id="@+id/view_open0"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -264,7 +256,6 @@
         android:layout_height="0dp"
         android:layout_weight="80" >
 
-        
         <TableRow
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -273,8 +264,7 @@
             <ImageView
                 android:id="@+id/view_open1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -319,8 +309,7 @@
             <ImageView
                 android:id="@+id/view_open2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -365,8 +354,7 @@
             <ImageView
                 android:id="@+id/view_open3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
@@ -411,8 +399,7 @@
             <ImageView
                 android:id="@+id/view_open4"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
