--- a/res/layout/activity_main1.xml
+++ b/res/layout/activity_main1.xml
@@ -208,7 +208,7 @@
             android:layout_weight="60" >
 
             <ImageView
-                android:id="@+id/view_chinanet"
+                android:id="@+id/view_starbucks"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                  />
