big change:add something try to create a general class to fit different situation

--- a/res/layout/activity_main1.xml
+++ b/res/layout/activity_main1.xml
@@ -191,13 +191,10 @@
                 android:src="@drawable/start_test2" />
         </TableRow>
     </TableRow>
-    
-    
-    
+
     <ImageView android:src="@drawable/cut_off_rule" />
-    
-    
-        <TableRow
+
+    <TableRow
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="80" >
@@ -210,8 +207,7 @@
             <ImageView
                 android:id="@+id/view_starbucks"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                 />
+                android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow
